# anon

./: Cargo.toml  Cargo_BACKUP_47887.toml  Cargo_LOCAL_47887.toml  Cargo_REMOTE_47887.toml  README.md  anon.example.yaml
debian/assets/: anon.logrotate
debian/maintainer-scripts/: postinst
debian/unit-scripts/: anon.service
src/: bot.rs  chats.rs  cli.rs  config.rs  log.rs  main.rs  state.rs
src/bot/: api.rs  client.rs  mod.rs
src/bot/api/: entities.rs  headers.rs  mod.rs
