[package]
name = "anon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json", "multipart", "stream"] }
serde = "1.0.228"
serde_json = "1.0.145"
slog = { version = "2.8.2", features = ["max_level_trace"] }
slog-async = "2.8.0"
slog-scope = "4.4.0"
slog-scope-futures = "0.1.1"
slog-term = "2.9.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
uuid = { version = "1.19.0", features = ["v4"] }
